--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -10,7 +10,7 @@ import Link from "./Link.astro";
   </div>
   <div class="font-sans text-center text-2xl md:text-3xl text-notwhite">
     <!-- Grab the nav list from data/navdata to populate the nav list -->
-    {navData.map((item) => <Link href={item.path} text={item.name} extraclasses="px-2" />)}
+    {navData.map((item) => <Link href={item.path} text={` ${item.name}`} extraclasses="px-2" />)}
   </div>
 </div>
 
