--- a/src/pages/account/login.astro
+++ b/src/pages/account/login.astro
@@ -1,78 +1,80 @@
 ---
 import MainLayout from "../../layouts/MainLayout.astro";
 import Link from "../../components/Link.astro";
-
-const params = Astro.url.searchParams;
-var redirect = params.get("redirect");
-if (redirect?.includes(".") && !redirect.startsWith("https://") && !redirect.startsWith("http://") && !redirect.startsWith("/")) {
-  redirect = `https://${redirect}`;
+import { PocketBaseLoginErrorResponse } from "../../utils/types";
+import PocketBase from "pocketbase";
+const PB_ROOT = import.meta.env.PB_ROOT;
+if (!PB_ROOT) {
+  return new Response('Internal error code: "PB MISSING"', { status: 500 });
 }
 
-const discordBaseUrl = "https://discord.com/api/oauth2/authorize";
-const clientId = import.meta.env.DISCORD_CLIENT_ID;
-const parts = Astro.url.toString().split("/");
-const baseUrl = [parts.slice(0, 3).join("/"), parts.slice(3).join("/")];
-const redirectUri = encodeURIComponent(import.meta.env.DISCORD_REDIRECT_URI) || encodeURIComponent(`${baseUrl}${import.meta.env.REDIRECT_AFTER_LOGIN_CALLBACK}`);
+console.log(PB_ROOT);
 
-const scopes = ["identify"];
-var scopeParam;
-if (scopes.length > 1) {
-  scopeParam = scopes.join("%20");
-} else {
-  scopeParam = scopes[0];
+let loginError = "";
+
+if (Astro.request.method === "POST") {
+  try {
+    const data = await Astro.request.formData();
+    const email = data.get("username")?.toString();
+    const password = data.get("password")?.toString();
+    if (email && password) {
+      const pb = new PocketBase(PB_ROOT);
+      const authData = await pb.collection("users").authWithOAuth2({ provider: "discord" });
+
+      console.log(pb.authStore.isValid);
+      console.log(pb.authStore.token);
+      console.log(pb.authStore.model?.id);
+    } else {
+      loginError = "Please enter a valid email and password";
+    }
+  } catch (e) {
+    console.error(e);
+    const res = e.response as PocketBaseLoginErrorResponse;
+    loginError = res.message + " Please check your email and password";
+
+    if (res) {
+      // loginError =
+    } else {
+      console.error(e);
+      return new Response("Internal error code: 'LOGIN_ERROR'", { status: 500 });
+    }
+  }
 }
-const url = `${discordBaseUrl}?client_id=${clientId}&redirect_uri=${redirectUri}&response_type=code&scope=${scopeParam}`;
-
-console.log(url);
-
-const linkId = "loginLink";
-const logOutId = "logOutText";
-const logOutLinkId = "logOutLink";
-
-const clientData = {
-  linkId,
-  logOutId,
-  logOutLinkId,
-  redirect,
-};
 ---
 
+<!-- Get request -->
 <MainLayout title="Login">
-  <div class="text-center">
-    <Link href={url} text="Login with Discord" newtab={false} id={linkId} />
-    <p class="hidden" id={logOutId}>
-      You are already logged in, would you like to <Link href="" text="Log Out" newtab={false} extraclasses="font-bold" id={logOutLinkId}>?</Link> or <Link
-        href="/account"
-        text="Go to your account?"
-        extraclasses="font-bold"
-      />
-    </p>
-    <script define:vars={clientData}>
-      const userString = localStorage.getItem("user");
-      if (userString) {
-        const user = JSON.parse(userString);
-        if (user) {
-          console.log("User already logged in");
-          const link = document.getElementById(linkId);
-          if (link === null) return console.log("Link element not found");
-          link.classList.add("hidden");
-          const logOutText = document.getElementById(logOutId);
-          if (logOutText === null) return console.log("Log out text element not found");
-          logOutText.classList.remove("hidden");
-        }
-      } else {
-        // Make sure the callback can redirect us correctly.
-        if (redirect) localStorage.setItem("redirect", decodeURIComponent(redirect));
-        else localStorage.removeItem("redirect");
-        console.log(`Redirecting after login to ${localStorage.getItem("redirect") || "home or env var"}`);
-      }
-
-      const logOutLink = document.getElementById(logOutLinkId);
-      if (logOutLink === null) return console.log("Log out text element not found");
-      logOutLink.addEventListener("click", () => {
-        localStorage.clear();
-        window.location.reload();
-      });
-    </script>
+  <div class="absolute inset-0 flex items-center justify-center">
+    <div class="w-full max-w-xs">
+      <h1 class="text-4xl pb-5 text-center">Login</h1>
+      <form class="px-8 pt-6 pb-8 mb-4" method="POST">
+        <div class="mb-4">
+          <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" type="text" name="username" placeholder="CoolUsername" />
+        </div>
+        <div class="mb-6">
+          <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" type="password" name="password" placeholder="A_Really_Strong_Password!" />
+        </div>
+        <h3 id="error" class="text-red-500 text-sm italic">{loginError}</h3>
+        <div class="flex items-center justify-between">
+          <button class="font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-max" type="submit"> Login </button>
+          <button class="font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-max" type="button" id="discord-login">Login With Discord</button>
+        </div>
+      </form>
+    </div>
   </div>
 </MainLayout>
+
+<script>
+  import PocketBase from "pocketbase";
+  const PB_ROOT = "https://pb.imadam.io";
+  console.log(PB_ROOT);
+  $("#discord-login").on("click", async () => {
+    console.log("clicked");
+    const pb = new PocketBase(PB_ROOT);
+    const authData = await pb.collection("users").authWithOAuth2({ provider: "discord" });
+
+    console.log(pb.authStore.isValid);
+    console.log(pb.authStore.token);
+    console.log(pb.authStore.model?.id);
+  });
+</script>
