--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -22,6 +22,7 @@ for (let post of posts) {
   console.log(post);
   expandedPosts.push(post);
 }
+expandedPosts.reverse();
 ---
 
 <MainLayout title="Blog">
