--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -12,6 +12,7 @@ import "../styles/global.css";
 import Nav from "../components/Nav.astro";
 import Footer from "../components/Footer.astro";
 import Head from "../components/Head.astro";
+import SpeedInsights from "@vercel/speed-insights/astro";
 ---
 
 <html lang="en">
@@ -22,5 +23,6 @@ import Head from "../components/Head.astro";
     <slot><div class="text-center pt-5 text-2xl">This is a default page, put some content here.</div></slot>
 
     <Footer />
+    <SpeedInsights />
   </body>
 </html>
